fix: 알림 테스트 수정(통합 제외)